# vk_renderlab

./: .bazelrc  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md
apps/renderlab/: BUILD.bazel  main.cpp
apps/renderlab/src/: main.cpp
renderlab/assets/: BUILD.bazel  file_io.cpp  file_io.hpp
renderlab/assets/include/assets/: file_io.hpp
renderlab/assets/src/: file_io.cpp
renderlab/base/: BUILD.bazel  log.cpp  log.hpp  noncopyable.hpp
renderlab/base/include/base/: assert.hpp  log.hpp  log_category.hpp  log_level.hpp  log_ring_buffer.hpp  noncopyable.hpp
renderlab/base/src/: log.cpp  log_ring_buffer.cpp
renderlab/platform/: BUILD.bazel  sdl_window.cpp  sdl_window.hpp
renderlab/platform/include/platform/: event_dispatcher.hpp  input_action.hpp  platform_event.hpp  sdl_window.hpp
renderlab/platform/src/: event_dispatcher.cpp  input_action.cpp  platform_event.cpp  sdl_window.cpp
renderlab/shaders/: BUILD.bazel  debug_cube.slang  triangle.slang
renderlab/ui/: BUILD.bazel  imgui_layer.cpp  imgui_layer.hpp
renderlab/ui/include/ui/: imgui_layer.hpp
renderlab/ui/src/: imgui_layer.cpp
renderlab/vulkan/: BUILD.bazel  vk_check.hpp  vulkan_context.cpp  vulkan_context.hpp
renderlab/vulkan/include/vk/: clear_renderer.hpp  device.hpp  frame_graph.hpp  memory_allocator.hpp  physical_device.hpp  pipeline.hpp  render_path.hpp  renderer.hpp  upload_context.hpp  vulkan_context.hpp
renderlab/vulkan/src/: clear_renderer.cpp  device.cpp  frame_graph.cpp  memory_allocator.cpp  physical_device.cpp  pipeline.cpp  render_path.cpp  renderer.cpp  upload_context.cpp  vulkan_context.cpp
tools/lint/: BUILD.bazel  clang_format.sh  clang_tidy.sh  slang_check.sh
