load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "renderlab",
    srcs = ["src/main.cpp"],
    data = ["//renderlab/shaders:runtime_shaders"],
    deps = [
        "//renderlab/assets",
        "//renderlab/base",
        "//renderlab/platform",
        "//renderlab/ui",
        "//renderlab/vulkan",
        "@spdlog",
    ],
)
