load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "platform",
    srcs = ["src/sdl_window.cpp"],
    hdrs = ["include/platform/sdl_window.hpp"],
    includes = ["include"],
    strip_include_prefix = "include",
    deps = [
        "//renderlab/base",
        "@sdl3",
        "@vk_sdk//:vulkan",
    ],
)
