load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "platform",
    srcs = [
        "src/event_dispatcher.cpp",
        "src/input_action.cpp",
        "src/platform_event.cpp",
        "src/sdl_window.cpp",
    ],
    hdrs = [
        "include/platform/event_dispatcher.hpp",
        "include/platform/input_action.hpp",
        "include/platform/platform_event.hpp",
        "include/platform/sdl_window.hpp",
    ],
    includes = ["include"],
    strip_include_prefix = "include",
    deps = [
        "//renderlab/base",
        "@sdl3",
        "@vk_sdk//:vulkan",
    ],
)
