load("@rules_vulkan//vulkan:defs.bzl", "shader_group", "slang_shader")

package(default_visibility = ["//visibility:public"])

_COMMON_SLANG_OPTS = [
    "-emit-spirv-directly",
    "-fvk-use-entrypoint-name",
    "-fvk-use-gl-layout",
    "-warnings-as-errors",
    "all",
]

slang_shader(
    name = "debug_cube_vert",
    srcs = ["debug_cube.slang"],
    out = "debug_cube.vert.spv",
    entry = "vertexMain",
    opts = _COMMON_SLANG_OPTS,
    profile = "spirv_1_4",
    stage = "vertex",
    target = "spirv",
)

slang_shader(
    name = "debug_cube_frag",
    srcs = ["debug_cube.slang"],
    out = "debug_cube.frag.spv",
    entry = "fragmentMain",
    opts = _COMMON_SLANG_OPTS,
    profile = "spirv_1_4",
    stage = "fragment",
    target = "spirv",
)

shader_group(
    name = "runtime_shaders",
    pkg_prefix = "renderlab/shaders/",
    deps = [
        ":debug_cube_frag",
        ":debug_cube_vert",
    ],
)

alias(
    name = "all_shaders",
    actual = ":runtime_shaders",
)
