load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "ui",
    srcs = ["src/imgui_layer.cpp"],
    hdrs = ["include/ui/imgui_layer.hpp"],
    includes = ["include"],
    strip_include_prefix = "include",
    deps = [
        "//renderlab/base",
        "//renderlab/platform",
        "@imgui//:imgui_sdl3_backend",
    ],
)
