load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "vulkan",
    srcs = ["src/vulkan_context.cpp"],
    hdrs = [
        "include/vk/vk_check.hpp",
        "include/vk/vulkan_context.hpp",
    ],
    includes = ["include"],
    strip_include_prefix = "include",
    deps = [
        "//renderlab/base",
        "//renderlab/platform",
        "@spdlog",
        "@vk_sdk//:vulkan",
    ],
)
