load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "vulkan",
    srcs = [
        "src/device.cpp",
        "src/frame_graph.cpp",
        "src/memory_allocator.cpp",
        "src/physical_device.cpp",
        "src/render_path.cpp",
        "src/renderer.cpp",
        "src/vulkan_context.cpp",
    ],
    hdrs = [
        "include/vk/device.hpp",
        "include/vk/frame_graph.hpp",
        "include/vk/memory_allocator.hpp",
        "include/vk/physical_device.hpp",
        "include/vk/render_path.hpp",
        "include/vk/renderer.hpp",
        "include/vk/vulkan_context.hpp",
    ],
    includes = ["include"],
    strip_include_prefix = "include",
    deps = [
        "//renderlab/base",
        "//renderlab/platform",
        "@spdlog",
        "@vk_sdk//:vulkan",
        "@vulkan_memory_allocator//:vma",
    ],
)
