load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "vulkan",
    srcs = [
        "src/device.cpp",
        "src/frame_graph.cpp",
        "src/memory_allocator.cpp",
        "src/physical_device.cpp",
        "src/pipeline.cpp",
        "src/render_path.cpp",
        "src/renderer.cpp",
        "src/upload_context.cpp",
        "src/vulkan_context.cpp",
    ],
    hdrs = [
        "include/vk/device.hpp",
        "include/vk/frame_graph.hpp",
        "include/vk/memory_allocator.hpp",
        "include/vk/physical_device.hpp",
        "include/vk/pipeline.hpp",
        "include/vk/render_path.hpp",
        "include/vk/renderer.hpp",
        "include/vk/upload_context.hpp",
        "include/vk/vulkan_context.hpp",
    ],
    defines = ["VULKAN_HPP_DISPATCH_LOADER_DYNAMIC=1"],
    includes = ["include"],
    strip_include_prefix = "include",
    deps = [
        "//renderlab/assets",
        "//renderlab/base",
        "//renderlab/platform",
        "@glm",
        "@spdlog",
        "@vk_sdk//:vulkan",
        "@vulkan_memory_allocator//:vma",
    ],
)
