load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "clang_format",
    srcs = ["clang_format.sh"],
)

sh_binary(
    name = "clang_tidy",
    srcs = ["clang_tidy.sh"],
)

sh_binary(
    name = "slang_check",
    srcs = ["slang_check.sh"],
)
